--- a/better/templates/book_details.html
+++ b/better/templates/book_details.html
@@ -10,6 +10,12 @@
     <p><strong>Author:</strong> {{ book.author }}</p>
     <p><strong>Description:</strong> {{ book.description }}</p>
     <p><strong>Year:</strong> {{ book.year }}</p>
+    
+    {% if session.get('admin_id') %}
+    <form action="{{ url_for('remove_book', book_id=book.id) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this book?');">
+        <button type="submit" style="color: red;">Remove Book</button>
+    </form>
+    {% endif %}
 
     {% if session.get('user_id') %}
     <form action="{{ url_for('borrow_book', book_id=book.id) }}" method="POST">
