--- a/better/templates/add_book.html
+++ b/better/templates/add_book.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Add New Book</h1>
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
         <label>Title:</label>
         <input type="text" name="title" required><br>
 
@@ -22,6 +22,9 @@
 
         <label>Genre:</label>
         <input type="text" name="genre"><br>
+
+        <label>Book Cover:</label>
+        <input type="file" name="cover_image" accept=".jpg, .jpeg, .png, .gif"><br>
 
         <button type="submit">Add Book</button>
     </form>
