--- a/better/templates/book_details.html
+++ b/better/templates/book_details.html
@@ -6,14 +6,21 @@
     <title>Document</title>
 </head>
 <body>
+    {% book.cover_image %}
+        <img src="{{ url_for('static', filename='images/' + book.cover_image) }}" alt="Cover Image" width="200">
+    {% endif %}
     <h1>{{ book.title }}</h1>
     <p><strong>Author:</strong> {{ book.author }}</p>
     <p><strong>Description:</strong> {{ book.description }}</p>
-    <p><strong>Year:</strong> {{ book.year }}</p>
+    <p><strong>Year:</strong> {{ book.published_year }}</p>
     
     {% if session.get('admin_id') %}
     <form action="{{ url_for('remove_book', book_id=book.id) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this book?');">
         <button type="submit" style="color: red;">Remove Book</button>
+    </form>
+
+    <form action="{{ url_for('update_book', book_id=book.id) }}" method="GET">
+        <button type="submit">Update Book</button>
     </form>
     {% endif %}
 
