--- a/better/templates/login.html
+++ b/better/templates/login.html
@@ -15,8 +15,8 @@
 
         <button type="submit">Submit</button>
     </form>
-    {{% if error_message %}}
+    {% if error_message %}
         <p style="color: red">{{ error_message }}</p>
-    {{% endif %}}
+    {% endif %}
 </body>
 </html>
