--- a/better/templates/book_details.html
+++ b/better/templates/book_details.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    {% book.cover_image %}
+    {% if book.cover_image %}
         <img src="{{ url_for('static', filename='images/' + book.cover_image) }}" alt="Cover Image" width="200">
     {% endif %}
     <h1>{{ book.title }}</h1>
@@ -28,6 +28,8 @@
     <form action="{{ url_for('borrow_book', book_id=book.id) }}" method="POST">
         <button type="submit">Borrow this book</button>
     </form>
+
+    
     {% else %}
     <p><a href="{{ url_for('login') }}">Log in</a> to borrow this book.</p>
     {% endif %}
