--- a/better/templates/add_book.html
+++ b/better/templates/add_book.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <h1>Add New Book</h1>
@@ -25,7 +26,10 @@
         <input type="text" name="genre"><br>
 
         <label>Book Cover:</label>
-        <input type="file" name="cover_image" accept=".jpg, .jpeg, .png, .gif"><br>
+        <input type="file" name="cover_image" accept=".jpg, .jpeg, .png"><br>
+
+        <label>PDF File</label>
+        <input type="file" name="pdf_file">
 
         <button type="submit">Add Book</button>
     </form>
