--- a/better/templates/books.html
+++ b/better/templates/books.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Books</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <form action="{{ url_for('search') }}" method="GET">
