--- a/better/templates/search_results.html
+++ b/better/templates/search_results.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search results for "{{ search_term }}"</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <h1>Search results for: "{{ search_term }}"</h1>
