Updated the styling and manualy merged bouth branch test and main to main

--- a/better/templates/about_us.html
+++ b/better/templates/about_us.html
@@ -1,13 +1,18 @@
+{% extends "base.html" %}
+
+{% block title %}About Us{% endblock %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
+    <script src="https://cdn.tailwindcss.com"></script>
+
+
     <h1>About Our Libraly</h1>
     <p>Welcome to our cozy digital library!</p>
     <p>We built this platform with love and logic so users can borrow, explore, and cherish books</p>
-</body>
-</html>
+{% endblock %}
