--- a/better/templates/book_details.html
+++ b/better/templates/book_details.html
@@ -1,11 +1,17 @@
+{% extends "base.html" %}
+
+{% block title %}Book Details{% endblock %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
+    <script src="https://cdn.tailwindcss.com"></script>
+
+
     {% if book.cover_image %}
         <img src="{{ url_for('static', filename='images/' + book.cover_image) }}" alt="Cover Image" width="200">
     {% endif %}
@@ -33,5 +39,4 @@
     {% else %}
     <p><a href="{{ url_for('login') }}">Log in</a> to borrow this book.</p>
     {% endif %}
-</body>
-</html>
+{% endblock %}
