--- a/better/templates/faq.html
+++ b/better/templates/faq.html
@@ -1,11 +1,17 @@
+{% extends "base.html" %}
+
+{% block title %}Faq{% endblock %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
+    <script src="https://cdn.tailwindcss.com"></script>
+
+
     <h1>Frequently Asked Questions</h1>
 
     <h3>Q: How do I register?</h3>
@@ -19,5 +25,4 @@
 
     <h3>Q: Is there an admin?</h3>
     <p>A: Maaaaybe~ but shhh... they’re watching</p>
-</body>
-</html>
+{% endblock %}
