--- a/better/templates/search_results.html
+++ b/better/templates/search_results.html
@@ -1,11 +1,17 @@
+{% extends "base.html" %}
+
+{% block title %}Search Results{% endblock %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search results for "{{ search_term }}"</title>
-</head>
-<body>
+    <script src="https://cdn.tailwindcss.com"></script>
+
+
     <h1>Search results for: "{{ search_term }}"</h1>
 
     {% if books %}
@@ -21,7 +27,4 @@
     {% else %}
         <p>No books found matching your search, nya~</p>
     {% endif %}
-</body>
-</html>
-</body>
-</html>
+{% endblock %}
