--- a/better/templates/favorites.html
+++ b/better/templates/favorites.html
@@ -1,11 +1,17 @@
+{% extends "base.html" %}
+
+{% block title %}Favorites{% endblock %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Favourite Books</title>
-</head>
-<body>
+    <script src="https://cdn.tailwindcss.com"></script>
+
+
     <h1>Your Favourite Books</h1>
 
     {% if fav_books %}
@@ -17,6 +23,4 @@
     {% else %}
         <p>You have no favorite books... yet~ 🐾</p>
     {% endif %}
-
-</body>
-</html>
+{% endblock %}
