--- a/better/templates/update_book.html
+++ b/better/templates/update_book.html
@@ -1,11 +1,17 @@
+{% extends "base.html" %}
+
+{% block title %}Update Book{% endblock %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
+    <script src="https://cdn.tailwindcss.com"></script>
+
+
     <h1>Update Book</h1>
     <form method="POST" enctype="multipart/form-data">
         <label>Title:</label>
@@ -37,5 +43,4 @@
     {% if error_message %}
         <p style="color: red">{{ error_message }}</p>
     {% endif %}
-</body>
-</html>
+{% endblock %}
